--- a/app/src/main/res/layout/activity_cadastrar.xml
+++ b/app/src/main/res/layout/activity_cadastrar.xml
@@ -11,7 +11,7 @@
            android:text="NutriBalance"
            android:textSize="35dp"
            android:layout_centerHorizontal="true"
-           android:layout_marginTop="20dp"
+           android:layout_marginTop="40dp"
            android:textColor="#8BC34A"/>
 
        <TextView
@@ -37,18 +37,18 @@
            android:layout_centerHorizontal="true"
            />
        <EditText
+           android:background="@drawable/back_input"
            android:id="@+id/inputEmail"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
+           android:layout_width="300dp"
+           android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="email@domain.com "
            android:layout_marginTop="10dp"
-           android:paddingTop="20dp"
+
            android:layout_below="@+id/TextEmail"
            android:layout_centerHorizontal="true"
            android:ems="100"
            android:selectAllOnFocus="true"
-           android:backgroundTint="#040503"
            android:gravity="center"/>
 
        <TextView
@@ -66,17 +66,17 @@
 
        <EditText
            android:id="@+id/inputnome"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
+           android:layout_width="300dp"
+           android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="nome "
+           android:background="@drawable/back_input"
            android:layout_marginTop="10dp"
-           android:paddingTop="20dp"
            android:layout_below="@+id/nome"
            android:layout_centerHorizontal="true"
            android:ems="100"
            android:selectAllOnFocus="true"
-           android:backgroundTint="#000000"
+
            android:gravity="center"/>
 
        <TextView
@@ -84,30 +84,26 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Senha"
-           android:layout_below="@+id/nome"
+           android:layout_below="@+id/inputnome"
            android:layout_marginLeft="10dp"
            android:textSize="17.5dp"
-           android:layout_marginTop="100dp"
+           android:layout_marginTop="25dp"
            android:textStyle="bold"
-
-
            android:layout_centerHorizontal="true"
            />
 
        <EditText
            android:id="@+id/inputsenha"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
+           android:layout_width="300dp"
+           android:layout_height="50dp"
            android:inputType="text"
            android:hint="Senha "
-           android:backgroundTint="#000000"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
-           android:paddingTop="20dp"
+           android:background="@drawable/back_input"
            android:layout_below="@+id/senha"
            android:layout_marginLeft="10dp"
            android:ems="100"
-
            android:selectAllOnFocus="true"
            android:gravity="center"/>
 
@@ -117,7 +113,7 @@
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputsenha"
            android:layout_centerHorizontal="true"
-           android:layout_marginTop="30dp"
+           android:layout_marginTop="55dp"
            android:text="Próxima etapa"
            android:textColor="@color/white"
            android:gravity="center"
