--- a/app/src/main/res/layout/fragment_step1.xml
+++ b/app/src/main/res/layout/fragment_step1.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="Ganhar Peso"
-        android:textColor="@color/white"
+        android:textColor="#FFFFFF"
         android:layout_marginBottom="80dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
