--- a/app/src/main/res/layout/fragment_step3.xml
+++ b/app/src/main/res/layout/fragment_step3.xml
@@ -106,12 +106,13 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/finalizar"
         android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:background="@drawable/btncadastrar"
+        android:layout_height="40dp"
+        android:background="@drawable/back_input"
         android:layout_below="@id/inputpeso"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="Finalizar"
+        android:textColor="@color/black"
 
         />
 
