--- a/app/src/main/res/layout/frame_tmb.xml
+++ b/app/src/main/res/layout/frame_tmb.xml
@@ -17,7 +17,7 @@
             android:id="@+id/txttmb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Taxa metábolica basal"
+            android:text="Taxa metábolica"
             android:textSize="30dp"
             android:layout_centerHorizontal="true"
             />
